[package]
name = "thsr-ticket-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
opener = "0.7.2"
reqwest = { version = "0.12.11", features = ["blocking", "json", "cookies", "gzip", "brotli", "deflate"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_repr = "0.1.19"
log = "0.4.22"
